Generalized the transform api url

--- a/Contact Form/index.html
+++ b/Contact Form/index.html
@@ -386,7 +386,8 @@
 				var xhr = new XMLHttpRequest();
 				//var url = 'http://opentextdemo.ca:8090/rest/api/v1/jobRunner/job'
 				//var url = 'http://10.18.50.93:8080/rest/api/v1/job/runner/job'
-				var url = 'http://td-mag202.eastus.cloudapp.azure.com/transform/api/v1/jobRunner/job';
+				//var url = 'http://td-mag202.eastus.cloudapp.azure.com/transform/api/v1/jobRunner/job';
+				var url = '/transform/api/v1/jobRunner/job';
 				xhr.open("POST", url, true);
 				xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
 				xhr.setRequestHeader('Accept', 'application/json; charset=UTF-8');
