--- a/Contact Form/index.html
+++ b/Contact Form/index.html
@@ -7,6 +7,9 @@
 		<script type="text/javascript" src="/iportal/jsapi"></script>
 	</head>
 	<body>
+<!-- Tech Mkt demo usage tracking stuff -->
+<span hidden><img src="https://prod-21.eastus.logic.azure.com:443/workflows/544d9b1832a44f68af07047e6658458f/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=TJC41IERJcA3I7CnrSvvByHsXzffzbfDONsrpR69B9k&cloud=analytics&product=magellan&version=211&democategory=mtm&demoscenario=IntelligentAutomation" width="1" height="1"></span>
+<!-- end demo usage tracking stuff -->
 		<div id="outerWrapper" class="wrapper">
 			<div id="banner" align="left" style="display:none">
 				<table id="bannerHeading" width="100%">
